--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/ament_cmake_black
-	previous = 
-	base = cbb8eb0
+	previous = cbb8eb0
+	base = 3b480dd
 	trim = 
 	trimbase = 
