--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/ament_black
-	previous = 
-	base = 8de6da1
+	previous = 8de6da1
+	base = 45ef326
 	trim = 
 	trimbase = 
